--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <ul>
             <li>Vagrant: Gerenciando máquinas virtuales</li>
             <li>Docker: Creando containers sin dolor de cabeza</li>
-            <li>Ansible: Infraestructura como código</li>
+            <li>Ansible</li>
             <li>Integración Continua: Madurez y Productividad en el Desarrollo de Software</li>
-            <li>Kubernetes: Introducción a la orquestación de containers</li>
+            <li>Kubernetes</li>
         </ul>
     </body>
 </html>
